// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notation component should render Notation component with props 1`] = `
<div
  className="flexFixedWrap"
>
  <div
    className="notation"
  >
    <div
      className="notation__wrap"
    >
      <span
        className="notation__text"
      >
        overview
      </span>
    </div>
    <div
      className="notation__btn"
    >
      <Memo(ButtonWatchNow)
        movieId={999}
      />
      <button
        className="btn btn__view"
        onClick={[Function]}
        type="button"
      >
        Hide Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Notation component should render Notation component without props 1`] = `
<div
  className="flexFixedWrap"
>
  <div
    className="notation"
  >
    <div
      className="notation__btn"
    >
      <Memo(ButtonWatchNow)
        movieId={0}
      />
      <button
        className="btn btn__view"
        onClick={[Function]}
        type="button"
      >
        View Info
      </button>
    </div>
  </div>
</div>
`;
